Remove clickable whitespace around record view thumbnails, fixes #224

--- a/app/assets/stylesheets/chf-overrides.css.scss
+++ b/app/assets/stylesheets/chf-overrides.css.scss
@@ -40,3 +40,7 @@
   height: auto;
   overflow: hidden;
 }
+// Fix clickable whitespace on thumbnails
+.representative-media {
+  display: inline !important;
+}
